--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -1,1 +1,16 @@
-<app-base-page></app-base-page>>
+<app-base-page></app-base-page>
+<div class="container box">
+  <img src="../../../assets/images/pic.JPG" class="box-img" alt="image">
+  <h1>Shubham Raichandel</h1>
+  <h5>Web Developer - Web Designer</h5>
+  <p>
+  A graduate of Software Engineering Technology. I Combine my education with 4 years experience in CSS3
+  HTML5, JavaScript and design to produce creative and effective website. I enjoy turning complex problems into
+  simple and beautiful solution.
+  </p>
+  <ul>
+    <li><a href="https://github.com/shubhamraichandel"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+    <li><a href="https://in.linkedin.com/in/shubham-raichandel-2117bb74"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+    <li><a href="../../../assets/docs/Shubham Raichandel.pdf"><i class="fa fa-file" aria-hidden="true"></i></a></li>
+  </ul>
+</div>
