--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -1,1 +1,22 @@
-<app-base-page></app-base-page>>
+<app-base-page></app-base-page>
+
+<!-- Content -->
+  <div class="container ">
+      <h3 class="text-center mt-4">Services that I offer</h3>
+
+
+      <div class="row mt-4 align-items-center">
+          <div class="col box md-4">
+            <img src="../../../assets/images/services/1.jpg" class="img-fluid ">
+            <h3 class="text-center">Full-Stack Web Development</h3>
+          </div>
+          <div class="col box md-4">
+              <img src="../../../assets/images/services/2.jpg" class="img-fluid  ">
+              <h3 class="text-center">Mobile App Development </h3>
+            </div>
+            <div class="col box md-4">
+                <img src="../../../assets/images/services/3.png" class="img-fluid ">
+                <h3 class="text-center">Soundtracks</h3>
+              </div>
+        </div>
+</div>
