--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="navbar fixed-bottom navbar-light bg-light">
+<div class="navbar  fixed-bottom navbar-dark bg-dark">
   <h6>&copy; Copyright {{ year }}. All Rights Reserved</h6>
 </div>
