--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">COMP308</a>
+  <a class="navbar-brand" routerLink="/">Shubham Raichandel</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -26,8 +26,8 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/products"
-          ><i class="fa fa-lg fa-briefcase"></i> Products</a
+        <a class="nav-link" routerLink="/projects"
+          ><i class="fa fa-lg fa-briefcase"></i> Projects</a
         >
       </li>
       <li class="nav-item">
