--- a/client/src/app/contacts/contact-list/contact-list.component.html
+++ b/client/src/app/contacts/contact-list/contact-list.component.html
@@ -5,7 +5,7 @@
           <a class="btn btn-primary" routerLink="/contact/contact-list/add" role="button">
           <i class="fas fa-plus-circle"></i> Add a Contact</a>
           <br>
-          <table class="table table-bordered table-striped table-hover">
+          <table class="box table table-bordered table-striped ">
               <!-- Header Row-->
               <tr>
                   <th class="text-center">First Name</th>
