Changes in header

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,3 +1,9 @@
+<!--
+  Author : Shubham Raichandel
+  Student ID : 300950762
+  Date : April 04, 2019
+-->
+
 <app-base-page></app-base-page>
       <div class="container box text-left mt-4">
           <h1 class="display-5">Hello There</h1>
