--- a/client/src/app/pages/projects/projects.component.html
+++ b/client/src/app/pages/projects/projects.component.html
@@ -1,3 +1,8 @@
+<!--
+  Author : Shubham Raichandel
+  Student ID : 300950762
+  Date : April 04, 2019
+-->
 <app-base-page></app-base-page>
 
  <!-- Content -->
