--- a/client/src/app/contacts/contact-list/contact-list.component.html
+++ b/client/src/app/contacts/contact-list/contact-list.component.html
@@ -1,3 +1,9 @@
+<!--
+  Author : Tom Tsiliopoulos
+  Modified By : Shubham Raichandel
+  Student ID : 300950762
+  Date : April 04, 2019
+-->
 <div class="container">
   <div class="row">
       <div class="col-md-offset-3 col-md-6">
