--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -1,3 +1,8 @@
+<!--
+  Author : Shubham Raichandel
+  Student ID : 300950762
+  Date : April 04, 2019
+-->
 <app-base-page></app-base-page>
 <div class="container box">
   <img src="../../../assets/images/pic.JPG" class="box-img" alt="image">
